# duty-scheduler

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
_bot/: main.py  schedule.py
_bot/core/: config.py  database.py
_bot/handlers/: duties.py  ping.py  register.py
bot/: database.py  duties.py  helper.py  main.py  utils.py
bot/core/: config.py
bot/handlers/: info_handler.py  ping_handler.py  start.py  start_handler.py
bot/reminders/: daily.py  monthly.py  montly.py
scripts/: format.sh  lint.sh
