[project]
name = "duty-scheduler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.7",
    "aiosqlite>=0.20.0",
    "coloredlogs>=15.0.1",
    "prettytable>=3.12.0",
    "pytelegrambotapi>=4.24.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.3"
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
